--- a/sass/style.scss
+++ b/sass/style.scss
@@ -96,22 +96,22 @@ picture{max-width: 100%;}
         transition:  0.5s ease;
         margin-bottom: 10px;
         cursor: pointer;
-        &:hover{
-            
-            grid-template-rows: 1fr 1fr;
-        }
         & .question{
             display: flex;
             align-items: center;
             justify-content: space-between;
             & p {
+                transition: 0.4s ease;
                 font-weight: 400;
                 color: var(--Very-dark-grayish-blue);
                 &:hover{
                     
                     color: var(--Soft-red);
                 }
-            }    
+            } 
+            & img{
+                transition: 0.4s;
+            }   
             
         }
         & .answer{
@@ -124,4 +124,19 @@ picture{max-width: 100%;}
             padding-right: 1rem
         }
     }
+}
+
+
+.active{
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+}
+
+.bold{
+    font-size: 17px;
+    color: var(--Very-dark-desaturated-blue);
+}
+
+.rotate{
+    transform: rotate(180deg);
 }
