--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,9 @@ main {
 
 .bold {
   font-size: 17px;
-  color: var(--Very-dark-desaturated-blue);
+  font-weight: 900;
+  color: black;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .rotate {
